Bug 1533797 - Let freetype backend fall back to MS_SYMBOL if no UNICODE charmap is available. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D30625